02-1-echo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "kaspa-chain.net"
      secretName: echo-cert
  rules:
  - host: "kaspa-chain.net"
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/"
        backend:
          service:
            name: echo-service
            port:
              number: 80
